--- a/index.html
+++ b/index.html
@@ -15,11 +15,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
   <style>
+    html {
+      background-color: #000000;
+      height: 100%;
+      width: 100%;
+      overscroll-behavior: none;
+    }
+
     body {
       background-color: #000000;
       color: #ffffff;
       margin: 0;
       padding: 0;
+      min-height: 100%;
+      width: 100%;
     }
 
     /* Loading fallback empty to prevent flash */
